fix: module stop offset registers, correct sci2 pin mapping to PMOD2 on RA8E1 FBP board

--- a/arch/arm/src/ra8/CMakeLists.txt
+++ b/arch/arm/src/ra8/CMakeLists.txt
@@ -75,7 +75,7 @@ endif()
 
 # Enhanced UART+DMA driver
 if(CONFIG_RA_SCI_UART)
-  list(APPEND SRCS ra_uart.c)
+  list(APPEND SRCS ra_sci.c)
 endif()
 
 # Flash memory driver
