--- a/boards/arm/ra8/fpb-ra8e1/rust_lib/Cargo.toml
+++ b/boards/arm/ra8/fpb-ra8e1/rust_lib/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["staticlib"]
 # For embedded development, you might want:
 # nb = "1.0"
 # cortex-m = "0.7"
+libm = "0.2"
 
 [profile.release]
 panic = "abort"
